1: Slotmachine.css - moved trigger to top of machine 2: Index.html - added a machine body to setup the border 3: Slotmachine.js - corrected the slideDown function to work properly

--- a/index.html
+++ b/index.html
@@ -17,108 +17,110 @@
 	<body>
 		<div id="slot-machine" class="slot-machine">
 			<h2 class="title">ChumpNugget's Random Pictures</h2>
-			<div class="wheel-housing">
-				<div id="slot-machine_wheel_1" class="wheel">
-					<div class="content">
-						<img src="images/IMG_0055.jpg" alt="IMG 0079" />
+			<div class="machine-body">
+				<div class="wheel-housing">
+					<div id="slot-machine_wheel_1" class="wheel">
+						<div class="content">
+							<img src="images/IMG_0055.jpg" alt="IMG 0079" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0064.jpg" alt="IMG 0080" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0079_1.jpg" alt="IMG 0081" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0080_1.jpg" alt="IMG 0082" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0084_1.jpg" alt="IMG 0083" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0087.jpg" alt="IMG 0084" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0092.jpg" alt="IMG 0095" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0093.jpg" alt="IMG 0097" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_3064.jpg" alt="IMG 0097" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_3101.jpg" alt="IMG 0097" />
+						</div>
 					</div>
-					<div class="content">
-						<img src="images/IMG_0064.jpg" alt="IMG 0080" />
+					<div id="slot-machine_wheel_2" class="wheel">
+						<div class="content">
+							<img src="images/IMG_0055.jpg" alt="IMG 0079" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0064.jpg" alt="IMG 0080" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0079_1.jpg" alt="IMG 0081" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0080_1.jpg" alt="IMG 0082" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0084_1.jpg" alt="IMG 0083" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0087.jpg" alt="IMG 0084" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0092.jpg" alt="IMG 0095" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0093.jpg" alt="IMG 0097" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_3064.jpg" alt="IMG 0097" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_3101.jpg" alt="IMG 0097" />
+						</div>
 					</div>
-					<div class="content">
-						<img src="images/IMG_0079_1.jpg" alt="IMG 0081" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0080_1.jpg" alt="IMG 0082" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0084_1.jpg" alt="IMG 0083" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0087.jpg" alt="IMG 0084" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0092.jpg" alt="IMG 0095" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0093.jpg" alt="IMG 0097" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_3064.jpg" alt="IMG 0097" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_3101.jpg" alt="IMG 0097" />
+					<div id="slot-machine_wheel_3" class="wheel">
+						<div class="content">
+							<img src="images/IMG_0055.jpg" alt="IMG 0079" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0064.jpg" alt="IMG 0080" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0079_1.jpg" alt="IMG 0081" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0080_1.jpg" alt="IMG 0082" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0084_1.jpg" alt="IMG 0083" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0087.jpg" alt="IMG 0084" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0092.jpg" alt="IMG 0095" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_0093.jpg" alt="IMG 0097" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_3064.jpg" alt="IMG 0097" />
+						</div>
+						<div class="content">
+							<img src="images/IMG_3101.jpg" alt="IMG 0097" />
+						</div>
 					</div>
 				</div>
-				<div id="slot-machine_wheel_2" class="wheel">
-					<div class="content">
-						<img src="images/IMG_0055.jpg" alt="IMG 0079" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0064.jpg" alt="IMG 0080" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0079_1.jpg" alt="IMG 0081" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0080_1.jpg" alt="IMG 0082" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0084_1.jpg" alt="IMG 0083" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0087.jpg" alt="IMG 0084" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0092.jpg" alt="IMG 0095" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0093.jpg" alt="IMG 0097" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_3064.jpg" alt="IMG 0097" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_3101.jpg" alt="IMG 0097" />
-					</div>
+				<div class="trigger">
+					<div class="blue slide_up arrow_up"></div>
+					<div class="button squared red spin" type="button">Spin</div>
+					<div class="blue slide_down arrow_down"></div>
 				</div>
-				<div id="slot-machine_wheel_3" class="wheel">
-					<div class="content">
-						<img src="images/IMG_0055.jpg" alt="IMG 0079" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0064.jpg" alt="IMG 0080" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0079_1.jpg" alt="IMG 0081" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0080_1.jpg" alt="IMG 0082" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0084_1.jpg" alt="IMG 0083" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0087.jpg" alt="IMG 0084" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0092.jpg" alt="IMG 0095" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_0093.jpg" alt="IMG 0097" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_3064.jpg" alt="IMG 0097" />
-					</div>
-					<div class="content">
-						<img src="images/IMG_3101.jpg" alt="IMG 0097" />
-					</div>
-				</div>
-			</div>
-			<div class="trigger">
-				<div class="blue slide_up arrow_up"></div>
-				<div class="button squared red spin" type="button">Spin</div>
-				<div class="blue slide_down arrow_down"></div>
 			</div>
 		</div>
 	</body>
