--- a/ChristmasTree.html
+++ b/ChristmasTree.html
@@ -4,22 +4,24 @@
 	<link rel="stylesheet" type="text/css" href="css/Winter/christmastree.css"/>
 	<link rel="stylesheet" type="text/css" href="css/Winter/snowflakes.css"/>
 	<link rel="stylesheet" type="text/css" href="css/Winter/snowman.css"/>
+	<link rel="stylesheet" type="text/css" href="css/Winter/people.css"/>
 	<script type="text/javascript" src="js/utils.js"></script>
-	<script type="text/javascript" src="js/Field.js"></script>
+	<script type="text/javascript" src="js/Settings.js"></script>
+	<script type="text/javascript" src="js/Winter/WinterSettings.js"></script>
 	<script type="text/javascript" src="js/Winter/snowflakes.js"></script>
 	<script type="text/javascript" src="js/Winter/christmastree.js"></script>
 	<script type="text/javascript">
 
 		function createSnowflakes(container) {
 			/* Fill the empty container with new leaves */
-			for (var i = 0; i < NUMBER_OF_SNOWFLAKES; i++) {
+			for (var i = 0; i < Settings.NUMBEROFSNOWFLAKES; i++) {
 				var snowflake = new Snowflake(container);
 				container.appendChild(snowflake.flake);
 			}
 		}
 
 		function createChristmasTrees(container) {
-			for( var i = 0; i < NUMBER_OF_CHRISTMASTREES; i++ )
+			for( var i = 0; i < Settings.NUMBEROFCHRISTMASTREES; i++ )
 			{
 				var christmastree = new ChristmasTree(container);
 			}
@@ -57,6 +59,19 @@
 	</div>
 	<div id="whitefield">
 		<div class="left-field"></div>
+		<div class="person">
+			<div class="head">
+				<div class="left-eye"></div>
+				<div class="right-eye"></div>
+				<div class="nose"></div>
+				<div class="mouth"></div>
+			</div>
+			<div class="left-arm"></div>
+			<div class="right-arm"></div>
+			<div class="body"></div>
+			<div class="left-leg"></div>
+			<div class="right-leg"></div>
+		</div>
 		<div class="right-field"></div>
 		<div class="snowman">
 			<div class="bowler-hat"></div>
