We have our family

--- a/ChristmasTree.html
+++ b/ChristmasTree.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/Winter/christmastree.css"/>
 	<link rel="stylesheet" type="text/css" href="css/Winter/snowflakes.css"/>
+	<link rel="stylesheet" type="text/css" href="css/Winter/colors.css"/>
+	<link rel="stylesheet" type="text/css" href="css/Winter/person.css"/>
 	<link rel="stylesheet" type="text/css" href="css/Winter/snowman.css"/>
 	<link rel="stylesheet" type="text/css" href="css/Winter/people.css"/>
 	<script type="text/javascript" src="js/utils.js"></script>
@@ -59,22 +61,65 @@
 	</div>
 	<div id="whitefield">
 		<div class="left-field"></div>
-		<div class="person">
-			<div class="head">
-				<div class="left-eye"></div>
-				<div class="right-eye"></div>
+		<div class="person daddy">
+			<div class="stocking-hat bowler-hat-black"></div>
+			<div class="head pale-face">
+				<div class="left-eye green-eye"></div>
+				<div class="right-eye green-eye"></div>
 				<div class="nose"></div>
 				<div class="mouth"></div>
 			</div>
-			<div class="left-arm"></div>
-			<div class="right-arm"></div>
-			<div class="body"></div>
-			<div class="left-leg"></div>
-			<div class="right-leg"></div>
+			<div class="left-arm tan-puffy-coat"></div>
+			<div class="right-arm tan-puffy-coat"></div>
+			<div class="body tan-puffy-coat"></div>
+			<div class="left-leg blue-jean"></div>
+			<div class="right-leg blue-jean"></div>
+		</div>
+		<div class="person mamma">
+			<div class="stocking-hat fuschia-hat"></div>
+			<div class="head pale-face">
+				<div class="left-eye green-eye"></div>
+				<div class="right-eye green-eye"></div>
+				<div class="nose"></div>
+				<div class="mouth"></div>
+			</div>
+			<div class="left-arm fuchsia-puffy-coat"></div>
+			<div class="right-arm fuchsia-puffy-coat"></div>
+			<div class="body fuchsia-puffy-coat"></div>
+			<div class="left-leg blue-jean"></div>
+			<div class="right-leg blue-jean"></div>
+		</div>
+		<div class="person elleia">
+			<div class="stocking-hat pink-hat"></div>
+			<div class="head pale-face">
+				<div class="left-eye green-eye"></div>
+				<div class="right-eye green-eye"></div>
+				<div class="nose"></div>
+				<div class="mouth"></div>
+			</div>
+			<div class="left-arm pink-puffy-coat"></div>
+			<div class="right-arm pink-puffy-coat"></div>
+			<div class="body pink-puffy-coat"></div>
+			<div class="left-leg blue-jean"></div>
+			<div class="right-leg blue-jean"></div>
+		</div>
+		<div class="person oliver">
+			<div class="stocking-hat blue-hat"></div>
+			<div class="head pale-face">
+				<div class="left-eye green-eye"></div>
+				<div class="right-eye green-eye"></div>
+				<div class="nose"></div>
+				<div class="mouth"></div>
+			</div>
+			<div class="left-arm blue-puffy-coat"></div>
+			<div class="right-arm blue-puffy-coat"></div>
+			<div class="body blue-puffy-coat"></div>
+			<div class="left-leg blue-jean"></div>
+			<div class="right-leg blue-jean"></div>
 		</div>
 		<div class="right-field"></div>
 		<div class="snowman">
-			<div class="bowler-hat"></div>
+			<div class="bowler-hat bowler-hat-black"></div>
 			<div class="ball head">
 				<div class="left eye"></div>
 				<div class="right eye"></div>
