The people are now created in JS

--- a/ChristmasTree.html
+++ b/ChristmasTree.html
@@ -6,12 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="css/Winter/colors.css"/>
 	<link rel="stylesheet" type="text/css" href="css/Winter/person.css"/>
 	<link rel="stylesheet" type="text/css" href="css/Winter/snowman.css"/>
-	<link rel="stylesheet" type="text/css" href="css/Winter/people.css"/>
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/Settings.js"></script>
 	<script type="text/javascript" src="js/Winter/WinterSettings.js"></script>
 	<script type="text/javascript" src="js/Winter/snowflakes.js"></script>
 	<script type="text/javascript" src="js/Winter/christmastree.js"></script>
+	<script type="text/javascript" src="js/Winter/person.js"></script>
+	<script type="text/javascript" src="js/Winter/people.js"></script>
 	<script type="text/javascript">
 
 		function createSnowflakes(container) {
@@ -41,8 +42,15 @@
 			tree.style.left = left +"px";
 		}
 
+		function createPeople(people) {
+			var field = document.querySelector('.left-field');
+			people.forEach(function( ele ) {
+				var person = new Person(ele);
+				field.appendChild(person.ele);
+			});
+		}
+
 		function stopTheDanceParty() {
-			console.log( "== DC == Dance party is over" );
 			var people = document.querySelectorAll('.person'),
 				length = people.length;
 
@@ -53,7 +61,6 @@
 		}
 
 		function startTheDanceParty() {
-			console.log( "== DC == Let's melt this snow mound" );
 			var people = document.querySelectorAll('.person'),
 				length = people.length;
 
@@ -73,13 +80,14 @@
 			alignCenterTree(container);
 			createChristmasTrees(container);
 			createSnowflakes(container);
+			createPeople(people);
+
 		}
 
 	</script>
 </head>
 <body>
-	<div id="decorations">
-	</div>
+	<div id="decorations"></div>
 	<audio id="player" src="media/WinterWonderland.m4a" ></audio>
 	<div id="field" class="snowflakes">
 		<div class="tree center">
@@ -92,62 +100,6 @@
 	</div>
 	<div id="whitefield">
 		<div class="left-field"></div>
-		<div class="person daddy">
-			<div class="stocking-hat bowler-hat-black"></div>
-			<div class="head pale-face">
-				<div class="left-eye green-eye"></div>
-				<div class="right-eye green-eye"></div>
-				<div class="nose"></div>
-				<div class="mouth"></div>
-			</div>
-			<div class="left-arm tan-puffy-coat"></div>
-			<div class="right-arm tan-puffy-coat"></div>
-			<div class="body tan-puffy-coat"></div>
-			<div class="left-leg blue-jean"></div>
-			<div class="right-leg blue-jean"></div>
-		</div>
-		<div class="person mamma">
-			<div class="stocking-hat fuschia-hat"></div>
-			<div class="head pale-face">
-				<div class="left-eye green-eye"></div>
-				<div class="right-eye green-eye"></div>
-				<div class="nose"></div>
-				<div class="mouth"></div>
-			</div>
-			<div class="left-arm fuchsia-puffy-coat"></div>
-			<div class="right-arm fuchsia-puffy-coat"></div>
-			<div class="body fuchsia-puffy-coat"></div>
-			<div class="left-leg blue-jean"></div>
-			<div class="right-leg blue-jean"></div>
-		</div>
-		<div class="person elleia">
-			<div class="stocking-hat pink-hat"></div>
-			<div class="head pale-face">
-				<div class="left-eye green-eye"></div>
-				<div class="right-eye green-eye"></div>
-				<div class="nose"></div>
-				<div class="mouth"></div>
-			</div>
-			<div class="left-arm pink-puffy-coat"></div>
-			<div class="right-arm pink-puffy-coat"></div>
-			<div class="body pink-puffy-coat"></div>
-			<div class="left-leg blue-jean"></div>
-			<div class="right-leg blue-jean"></div>
-		</div>
-		<div class="person oliver">
-			<div class="stocking-hat blue-hat"></div>
-			<div class="head pale-face">
-				<div class="left-eye green-eye"></div>
-				<div class="right-eye green-eye"></div>
-				<div class="nose"></div>
-				<div class="mouth"></div>
-			</div>
-			<div class="left-arm blue-puffy-coat"></div>
-			<div class="right-arm blue-puffy-coat"></div>
-			<div class="body blue-puffy-coat"></div>
-			<div class="left-leg blue-jean"></div>
-			<div class="right-leg blue-jean"></div>
-		</div>
 		<div class="right-field"></div>
 		<div class="snowman">
 			<div class="bowler-hat bowler-hat-black"></div>
